The revision history for Net-Pcap

(next)

  [Bugfixes]
  - CPAN RT #55163: Typo in eg/pcapdump (Iain Arnell and Jose Pedro Oliveira).
  - CPAN RT #83842: Typo in Net:Pcap (Xavier Guimard).

  [Code]
  - use warnings (David Farrell).

  [Documentation]
  - Moved HISTORY from README to main documentation.
  - Rewrote AUTHORS to acknowledge all contributors.
  - Updated copyright years.

  [Tests]
  - Added timeouts to prevent tests from hanging (Patrice Auffret).
  - t/17-lib_version.t: adjust regexp to match Apple builds (David Farrell).
  - t/50-poe-component-pcap.t: small improvments.
  - Added t/50-net-pcap-easy.t to test with Net::Pcap::Easy.
  - Added t/50-anyevent-pcap.t to test with AnyEvent::Pcap.

  [Distribution]
  - Converted the Changes file to CPAN::Changes::Spec format.
  - Makefile.PL: append CCFLAGS to $Config{ccflags} instead of overriding it.
  - Makefile.PL: now dies when libpcap isn't found.
  - Makefile.PL: declare minimum Perl version (David Farrell).


0.17 - 2012-11-28 - Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN RT #43308: Net::Pcap no longer enables immediate (unsafe)
    signals delivery.
  - Fix allocated size in pcap_open(), pcap_createsrcstr() and
    pcap_parsesrcstr().

  [API]
  - Now made the C-like API available by default. Added the
    pcap_perl_settings() function and UNSAFE_SIGNALS pseudo-bloc.

  [Code]
  - Replaced all occurrences of safemalloc() with Newx().
  - Silenced some warnings.

  [Documentation]
  - Added a long note about Net::Pcap and signals delivery.
  - Improved README.
  - Mention Net::Pcap::Easy.

  [Tests]
  - Fixed t/17-lib_version.t to handle two digits versions.
  - CPAN RT #44448: Fixed t/17-lib_version.t to handle versions from CVS,
    thanks to Craig Davison.
  - Refactored t/01-api.t and added checks for the new API.
  - Replaced the fragile error check in t/03-openlive.t by a simpler and
    more robust one.


0.16 - 2008-01-01 - Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]